# claude-diary-mcp-server

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  configure-claude.sh  mcp-config.json
examples/: explore_api.rs
src/: main.rs
