[package]
name = "claude-diary-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6", features = ["server", "transport-io", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
